# Fine-Tuning-Experiment

./: .gitignore  Closed_source_model_eval.ipynb  fine-tuning-experiment-0326-ft-v2.ipynb  fine-tuning-experiment-0326-ft.ipynb  fine-tuning-experiment-0326-inference-v2.ipynb  fine-tuning-experiment-0326-inference.ipynb  fine-tuning-experiment-0402-entropy-reg.ipynb  fine-tuning-experiment-0402.ipynb  fine-tuning-train-EDA.ipynb  finetuning-experiment-0326-llm-one-shot-gemini.ipynb  finetuning-experiment-0326-llm-one-shot-gpt.ipynb  model_performance_comparison.ipynb  model_performance_tracker.csv  pyproject.toml  qwen3-ft-0330_cp1_evaluation.ipynb  qwen3-ft-0330_cp3_evaluation.ipynb  qwen3-ft-0330_masked_cp1_evaluation.ipynb  qwen3-ft-0330_masked_cp2_evaluation.ipynb  qwen3-ft-bce-0327-masked.ipynb  qwen3-ft-bce-0327.ipynb  test.csv
.ipynb_checkpoints/: model_performance_comparison-checkpoint.ipynb
inference_notebooks/: fine-tuning-experiment-03271203-inference.ipynb  ft-0402-inference-final-adapter.ipynb  ft-0402-v2-inference-cp2.ipynb  ft-0402-v2-inference-final.ipynb  ft_inference_base_model_Qwen3-4B.ipynb  qwen3-ft-03271700-evaluation.ipynb  qwen3-ft-0330_cp2_evaluation.ipynb  qwen3-ft-bce-0327_evaluation.ipynb
