[project]
name = "fine-tuning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "datasets>=4.8.4",
    "huggingface-hub>=1.8.0",
    "ipykernel>=7.2.0",
    "peft>=0.18.1",
    "scikit-learn>=1.8.0",
    "transformers>=5.4.0",
    "trl>=0.29.1",
]
